# Learning-Real-Analysis

./: .gitignore  .latexmkrc  ADD-PROOF.md  BACKLOG.md  Capstone.md  Current issues.md  DESIGN.md  LICENSE  My_Mathematical_Journey.tex  PEDAGOGICAL-REVIEW.md  RA-to-do-checkbox.md  RA-to-do-with-dependencies.md  README.md  REFACTOR-PROMPT.md  TA-prompt.tex  ToDo.md  algebraic-dag.html  block-discussion-template.tex  blueprint-macros.tex  box-vocabulary.html  cantor-quote.tex  curriculum.html  definition-template.tex  draft-cauchy-proof.tex  epsilon.tex  exercises-cauchy.tex  exercises-limsup-liminf.tex  exercises-metric-spaces.tex  exercises-sequences.tex  exercises-subsequences-and-bolzano–weierstrass.tex  exersizes-monotone.tex  front-matter-diagnostic.tex  front-matter.tex  glossary-foundations.tex  main.aux  main.tex  main.toc  map.tex  math_study_schedule.html  metric-spaces-to-do.tex  (+16 more)
00-propositional-logic/: index.tex  (+3 more)
nurbs_dde/: CMakeLists.txt  TODO.md  engine_config.json  imgui.ini  refactor_progress.md
nurbs_dde/cmake/: CompileShaders.cmake
nurbs_dde/docs/: ADDING_A_MATH_COMPONENT.md  ADDING_DAMPED_OSCILLATOR.md  ALLOCATION_POLICY.md  ARCHITECTURAL_DESIGN.md  CAPTURE_SERVICE.md  COORDINATE_SYSTEMS.md  CURRENT_ARCHITECTURE_DIAGRAM.md  DIAGNOSTICS_SERVICE.md  ENGINE_ARCHITECTURE.md  EVENT_BUS_SERVICE.md  INTEGRATION_LAB_DESIGN.md  INTEGRATION_LAB_IMPLEMENTATION_PLAN.md  Integration-Nurbs-Splines.md  METRICS_PROFILING_SERVICE.md  PROPOSED_ARCHITECTURE_DIAGRAM.md  RESOURCE_MANAGER_SERVICE.md  SIM_METADATA_SERVICE.md  System-Upgrades.MD  TEXT_RENDERING_IMPLEMENTATION_PLAN.md  TEXT_RENDERING_SERVICE.md  THREAD_MANAGEMENT_SERVICE.md  TIME_AND_SIMULATION.md  TOBEREVIEWED.md  architecture_review.md  ctrl_a_leader_seeker.md  how_to_add_a_surface_prompt.md  prompts_category_a.md  prompts_category_b.md  prompts_category_c.md
nurbs_dde/shaders/: curve.frag  curve.vert
nurbs_dde/src/: CMakeLists.txt
nurbs_dde/src/app/: AlternateViewPanel.hpp  AnalysisPanel.cpp  AnalysisPanel.hpp  AnalysisPanels.cpp  AnalysisPanels.hpp  AnalysisScene.cpp  AnalysisScene.hpp  AnalysisSpawner.cpp  AnalysisSpawner.hpp  AnimatedCurve.cpp  AnimatedCurve.hpp  AppConfig.hpp  Application.cpp  Application.hpp  ContourWindowRenderer.hpp  CoordDebugPanel.hpp  Curve2DOverlay.hpp  CurveEntry.hpp  FrenetFrame.hpp  GaussianRipple.hpp  GaussianSurface.cpp  GaussianSurface.hpp  HotkeyManager.hpp  HoverResult.hpp  IntegrationLabAnalyticsPackets.cpp  IntegrationLabAnalyticsPackets.hpp  MultiWellPanels.cpp  MultiWellPanels.hpp  MultiWellScene.cpp  MultiWellScene.hpp  MultiWellSpawner.cpp  MultiWellSpawner.hpp  PanelHost.hpp  ParticleBehaviors.hpp  ParticleFactory.hpp  ParticleGoals.hpp  ParticleInspectorPanel.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  ParticleSwarmFactory.hpp  (+61 more)
nurbs_dde/src/app/legacy/: AnalysisPanel.cpp  README.md  Scene.cpp
nurbs_dde/src/core/: BufferManager.cpp  BufferManager.hpp  EngineContext.cpp  EngineContext.hpp  Types.hpp
nurbs_dde/src/engine/: AppConfig.cpp  AppConfig.hpp  CameraInputController.hpp  CameraService.hpp  CameraTypes.hpp  Engine.cpp  Engine.hpp  EngineAPI.hpp  HotkeyService.hpp  IScene.hpp  ISimulation.hpp  InteractionService.hpp  PanelService.hpp  RenderService.hpp  RenderSubmission.hpp  RuntimeIds.hpp  ScopedServiceHandles.hpp  ServiceHandle.hpp  SimulationClock.hpp  SimulationHost.hpp  SimulationMetadata.hpp  SimulationRuntime.cpp  SimulationRuntime.hpp  ViewInputService.hpp
nurbs_dde/src/engine/capture/: CaptureService.cpp  CaptureService.hpp
nurbs_dde/src/engine/diagnostics/: DiagnosticsService.cpp  DiagnosticsService.hpp  DiagnosticsTypes.hpp
nurbs_dde/src/engine/events/: EventBusService.cpp  EventBusService.hpp
nurbs_dde/src/engine/logging/: LoggerService.cpp  LoggerService.hpp  LoggerTypes.hpp
nurbs_dde/src/geometry/: Axes2D.cpp  Axes2D.hpp  Curve.cpp  Curve.hpp  Hyperbola.cpp  Hyperbola.hpp  ICurve.cpp  ICurve.hpp  Parabola.cpp  Parabola.hpp
nurbs_dde/src/math/: Axes.cpp  Axes.hpp  Conics.cpp  Conics.hpp  Conics_eval_branch_public.bak  ExtremumSurface.hpp  ExtremumTable.cpp  ExtremumTable.hpp  Scalars.hpp  SineRationalSurface.hpp  Surfaces.cpp  Surfaces.hpp  Types.hpp  Vec3.cpp  Vec3.hpp
nurbs_dde/src/memory/: ArenaSlice.hpp  BufferManager.cpp  BufferManager.hpp  Containers.hpp  MemoryService.cpp  MemoryService.hpp  Unique.hpp
nurbs_dde/src/numeric/: Differentiator.hpp  MathTraits.hpp  Vec3Ops.hpp  math_config.hpp  ops.hpp
nurbs_dde/src/platform/: GlfwContext.cpp  GlfwContext.hpp
nurbs_dde/src/renderer/: GpuTypes.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Pipeline.cpp  Pipeline.hpp  PngWriter.hpp  Renderer.cpp  Renderer.hpp  SecondWindow.cpp  SecondWindow.hpp  Swapchain.cpp  Swapchain.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
nurbs_dde/src/sim/: BiasedBrownianLeader.hpp  BrownianMotion.hpp  DelayDifferentialSystem.hpp  DelayPursuitEquation.hpp  DifferentialSystem.hpp  DirectPursuitEquation.hpp  DomainConfinement.hpp  EulerIntegrator.hpp  GradientWalker.hpp  HistoryBuffer.hpp  IConstraint.hpp  IEquation.hpp  IIntegrator.hpp  LeaderSeekerEquation.hpp  LevelCurveWalker.hpp  MilsteinIntegrator.hpp  MinDistConstraint.hpp  MomentumBearingEquation.hpp
nurbs_dde/src/telemetry/: TelemetryService.cpp  TelemetryService.hpp  TelemetryWriter.cpp  TelemetryWriter.hpp
nurbs_dde/tests/: CMakeLists.txt  test_all_simulations.cpp  test_alternate_view_builders.cpp  test_app_config.cpp  test_capture_service.cpp  test_curve.cpp  test_differential_system.cpp  test_engine_services.cpp  test_event_bus_service.cpp  test_integration_lab_analytics_packets.cpp  test_logger_service.cpp  test_numeric.cpp  test_parabola.cpp  test_particle_system.cpp  test_resource_manager_service.cpp  test_sim_metadata_service.cpp  test_simulation_context.cpp  test_simulation_runtime.cpp  test_simulation_surface_gaussian.cpp  test_surface_mesh_cache.cpp  test_surface_metadata.cpp  test_text_overlay_service.cpp  test_thread_management_service.cpp  test_vec3.cpp
nurbs_dde/tools/: check_allocation_policy.py  check_hot_path_container_policy.py
(+2113 files in other folders)
